# depatcher

./: .gitignore  CMakeLists.txt  README.md
include/: mod.hpp
include/RDI/: ReflectiveDLLInjection.h
include/RDI/dll/: ReflectiveLoader.h
include/RDI/inject/: LoadLibraryR.h
include/mod/: Depatcher.h  Global.h  Hooks.h
loader/: CMakeLists.txt
loader/def/: library.asm  library.def
loader/include/loader/: library.h
loader/src/: main.cpp
src/: mod.cpp
src/RDI/dll/: ReflectiveLoader.cpp
src/RDI/inject/: GetProcAddressR.cpp  LoadLibraryR.cpp
src/launcher/: WinMain.cpp
src/mod/: Depatcher.cpp  DllMain.cpp  Hooks.cpp
